gcc/testsuite/rust/rustc/ui/bad/bad-main.rs
fn main(x: isize) { } // { dg-error ".E0580." "" { target *-*-* } }

